# api/api.yml
@@ -118,6 +118,10 @@ paths:
     $ref: "./paths/api/images/{image_id}/tags/index.yml"
   "/api/images/tags":
     $ref: "./paths/api/images/tags/index.yml"
+  "/api/images/manageable-users":
+    $ref: "./paths/api/images/manageable-users/index.yml"
+  "/api/images/verifiable-users":
+    $ref: "./paths/api/images/verifiable-users/index.yml"
   "/api/images/{image_id}/tags/{image_tag_id}":
     $ref: "./paths/api/images/{image_id}/tags/{image_tag_id}/index.yml"
   "/api/images/{image_id}/bookmark":
